--- a/style.css
+++ b/style.css
@@ -1,6 +1,48 @@
+.page {
+  max-width: 1080px;
+  margin: 0 auto;
+  
+}
+
+.menu {
+  height: 20px;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  position: relative;
+}
+
+.menu__icon {
+  display: none;
+}
+
+.menu__link {
+  margin: 10px;
+  padding: 0;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
+
+
+
+
 @media (max-width:400px) {
   .content {
     font-size: 10px;
+    margin-top: 10px;
+  }
+
+  .menu__icon {
+    display: block;
+    position: absolute;
+    left: 0;
+    font-size: 21px;
+  }
+
+  .menu__link {
+    display: none;
+    position: absolute;
   }
 }
 
@@ -32,9 +74,4 @@
   .content {
     font-size: 21px;
   }
-}
-
-.page {
-  max-width: 1080px;
-  margin: 0 auto;
 }
